Added favourites fragment, added Realm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="text_movies">Movies</string>
     <string name="text_podcasts">Podcasts</string>
 
-    <string name="country_placeholder">Country %s</string>
+    <string name="country_placeholder">Country: %s</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="favourites_no_data">No data added to favourites</string>
 </resources>
