--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GeekApps</string>
+    <string name="app_name">ItunesMedia</string>
     <string name="text_favorites">Favourites</string>
     <string name="text_audiobooks">AudioBooks</string>
     <string name="text_movies">Movies</string>
